2003-05-29  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/virtual.c (CMD_GotoDeskAndPage):
	fixed "GotoDeskAndPage prev" on desks larger than 2x2

	* fvwm/functions.c (expand_extended_var):
	(expand):
	fixed expanding variables that are empty, for example $[w.resource]
	or $[version.info] or $[EMPTY_STRING];
	actually add announced earlier $[desk.pagesx] and $[desk.pagesy]

2003-05-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	fixed warping pointer to first menu item when invoked with the mouse

2003-05-28  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/ConfigFvwmDefaults:
	* fvwm/fvwm2.1:
	* fvwm/windowlist.c:
	* NEWS:
	WindowListFunc is executed now within a window context,
	so "WindowId $0" is not needed anymore in its definition.
	Documented FvwmEvent behaviour of executing window related event
	handlers within a window context.

2003-05-27  olicha  <olivier.chapuis@free.fr>

	* fvwm/icons.c (CreateIconWindow):
	(DrawIconWindow):
	(GetIconBitmap):
	Fixed loading of application supplied pixmap on 8/24 depth screen

2003-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (DoSetFocus):
	don't fiddle with the window list for windows that are going to be
	destroyed

	* fvwm/add_window.c (delete_client_context):
	(destroy_auxiliary_windows):
	(destroy_window):
	fixed empty frame windows when X reused the window id for a new window
	while the old one was scheduled to be destroyed

	* fvwm/add_window.c (destroy_window):
	fixed a core dump when window was destroyed twice in a complex function

2003-05-26  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/builtins.c (CMD_Exec): Fix problem with Rox Filer.

2003-05-25  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/decorations.c: Sync up motif hints structure to aix,hp,
	solaris.

2003-05-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (GrabEm):
	do not confine the pointer to the root window when grabbed; this can
	cause the pointer to be warped to another screen
