@@ -2603,20 +2603,19 @@ void CMD_SetEnv(F_CMD_ARGS)
   char *szValue = NULL;
   char *szPutenv = NULL;
 
-  action = GetNextToken(action,&szVar);
+  action = GetNextToken(action, &szVar);
   if (!szVar)
     return;
-  action = GetNextToken(action,&szValue);
+  action = GetNextToken(action, &szValue);
   if (!szValue)
   {
-    /* no value, treat as unset */
-    CMD_UnsetEnv(F_PASS_ARGS);
+    /* no value, ignore */
     free(szVar);
     return;
   }
 
-  szPutenv = safemalloc(strlen(szVar)+strlen(szValue)+2);
-  sprintf(szPutenv,"%s=%s",szVar,szValue);
+  szPutenv = safemalloc(strlen(szVar) + strlen(szValue) + 2);
+  sprintf(szPutenv,"%s=%s", szVar, szValue);
   putenv(szPutenv);
   add_to_env_list(szVar, szPutenv);
   /* szVar is stored in the env list. do not free it */
@@ -2628,7 +2627,7 @@ void CMD_UnsetEnv(F_CMD_ARGS)
   char *szVar = NULL;
   char *szPutenv = NULL;
 
-  action = GetNextToken(action,&szVar);
+  action = GetNextToken(action, &szVar);
   if (!szVar)
     return;
 
